--- a/src/indexstyle.css
+++ b/src/indexstyle.css
@@ -107,3 +107,30 @@ section {
   background-color: #fc6a03;
   color: #f8f9fa;
 }
+.profile-image {
+  border-radius: 50%;
+  width: 70%;
+  height: auto;
+}
+.widget-title,
+h6 {
+  background: #fc6a03;
+  color: #f8f9fa;
+  height: 40px;
+  width: 100%;
+  line-height: 40px;
+  border-radius: 30px;
+  margin-bottom: 30px;
+}
+.subscribe-link,
+i {
+  padding: 10px;
+  color: black;
+}
+.subscribe-link,
+i:hover{
+  color: #fc6a03;
+}
+#card4{
+    border-radius: 30px;
+}
