--- a/src/indexstyle.css
+++ b/src/indexstyle.css
@@ -134,3 +134,36 @@ i:hover{
 #card4{
     border-radius: 30px;
 }
+#card5{
+     border-radius: 30px;
+     padding-top: 10px;
+     padding-bottom: 10px;
+
+}
+.newsletter-form input {
+    width: 100%;
+    height: 40px;
+    background-color: #f5f5f8;
+    border: 1px solid #e1e1e1;
+    border-radius: 30px;
+    padding: 0 20px;
+    font-size: 14px;
+    color: #b5aec4;
+}
+.newsletter-form button {
+    width: 45px;
+    height: 45px;
+    background-color: #fc6c3f;
+    border: none;
+    color: #fff;
+    padding: 5px;
+    border-radius: 30px;
+    position: absolute;
+    right: 0;
+    top: -50;
+    z-index: 9;
+    cursor: pointer;
+}
+#arrow{
+  color: #f5f5f8;
+}
