--- a/src/indexstyle.css
+++ b/src/indexstyle.css
@@ -128,42 +128,143 @@ i {
   color: black;
 }
 .subscribe-link,
-i:hover{
+i:hover {
   color: #fc6a03;
 }
-#card4{
-    border-radius: 30px;
+#card4 {
+  border-radius: 30px;
 }
-#card5{
-     border-radius: 30px;
-     padding-top: 10px;
-     padding-bottom: 10px;
-
+#card5 {
+  border-radius: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .newsletter-form input {
-    width: 100%;
-    height: 40px;
-    background-color: #f5f5f8;
-    border: 1px solid #e1e1e1;
-    border-radius: 30px;
-    padding: 0 20px;
-    font-size: 14px;
-    color: #b5aec4;
+  width: 100%;
+  height: 40px;
+  background-color: #f5f5f8;
+  border: 1px solid #e1e1e1;
+  border-radius: 30px;
+  padding: 0 20px;
+  font-size: 14px;
+  color: #b5aec4;
 }
 .newsletter-form button {
-    width: 45px;
-    height: 45px;
-    background-color: #fc6c3f;
-    border: none;
-    color: #fff;
-    padding: 5px;
-    border-radius: 30px;
-    position: absolute;
-    right: 0;
-    top: -50;
-    z-index: 9;
-    cursor: pointer;
+  width: 45px;
+  height: 45px;
+  background-color: #fc6a03;
+  border: none;
+  color: #fff;
+  padding: 5px;
+  border-radius: 30px;
+  position: absolute;
+  right: 0;
+  top: -50;
+  z-index: 9;
+  cursor: pointer;
 }
-#arrow{
+#arrow {
   color: #f5f5f8;
+}
+#home-id {
+  text-decoration: none;
+  color: black;
+}
+.Arc-id {
+  background-color: #fc6a03;
+  text-align: center;
+  padding: 40px;
+  color: #f8f9fa;
+  font-weight: lighter;
+  letter-spacing: 4px;
+}
+.go-back-nav {
+  padding: 20px;
+}
+.arch-img {
+  border-radius: 30px;
+  border: no;
+}
+.card {
+  border: none;
+}
+.number {
+  display: inline;
+  margin-left: 350px;
+}
+.page-link {
+  color: black;
+}
+.page-link:hover {
+  color: #f8f9fa;
+
+  background-color: #fc6a03;
+}
+#img-contact {
+  padding-top: 30px;
+}
+#contact-row {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 10px;
+}
+.contact-btn {
+  background-color: #fc6a03;
+  border: none;
+  color: #fff;
+  padding: 15px;
+}
+#blog-text {
+  font-weight: lighter;
+  font-style: italic;
+  font-size: 15px;
+  padding: 20px;
+  font-size: 20px;
+}
+.recipe-img {
+  max-width: 100%;
+  border-radius: 40px;
+  padding: 20px;
+}
+#card-rec {
+  background-color: #fc6a03;
+  margin-top: -70px;
+  color: #f5f5f8;
+  padding: 40px;
+  margin-bottom: 20px;
+}
+#title-rec {
+  padding: 20px;
+  margin: 10px;
+}
+#sub-rec {
+  padding: 10px;
+  margin: 10px;
+  word-spacing: 3px;
+  font-style: italic;
+  font-weight: lighter;
+  font-size: 20px;
+}
+#card-about {
+  background-color: #fc6a03;
+  margin-top: 20px;
+  color: #f5f5f8;
+  padding: 40px;
+  margin-bottom: 20px;
+}
+#about-img {
+  max-width: 100%;
+  border-radius: 30px;
+  margin-top: 20px;
+}
+.footer-social-area {
+  padding-top: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-bottom: 30px;
+  justify-content: center;
+}
+#icon-text {
+  color: black;
+  padding: 15px;
 }
